! Minor smiley misalignment fixed. (index.css, core/css/index.css) [Bug 4727]
Fixing bugs is really boring. :P

git-svn-id: https://devel.simplemachines.org/code/smf/trunk@10549 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/index.css
+++ b/Themes/core/css/index.css
@@ -1778,6 +1778,10 @@ div#pollmoderation
 {
 	clear: right;
 }
+img.smiley
+{
+	vertical-align: bottom;
+}
 .postarea
 {
 	margin-left: 16em;
